
- ZON-2444, ZON-2455, ZON-2456: Author pages with bio, articles and comments

- ZON-2520: Implement RSS feed for Roost

- ZON-2428: Remove "ZEIT ONLINE" from social media meta titles

- MAINT: Fix asset_host etc to allow mounting under an URL prefix (for showcases)

- MAINT: Adjust templates to allow mounting under an URL prefix (for showcases)


2.37 (2015-12-15)
-----------------

- ZON-2545: Adjust padding on printkiosk and snapshot

- ZON-2551: Make ESI work for Instant Articles feed

- FIX: prevent links in links in shop teaser

- MAINT: Allow HTTP exceptions to propagate to the client from Jinja templates

- FIX: Be more defensive in several places:
  * Ignore byline for content with missing content-type
  * Skip gallery entries with missing content-type
  * Skip unresolveable images in Spektrum feed
  * Handle non-ascii user names


2.36 (2015-12-10)
-----------------

- HOTFIX: correct path for Instant Articles

- HOTFIX: Hide separator for empty metadata

- HOTFIX: Fix navigation submenu appearance

- HOTFIX: Display gallery entry captions again

- ZON-2506: Add campaign parameters to ze.tt links


2.35 (2015-12-08)
-----------------

- DEV-968: Distribute new Webtrekk script

- ZON-2446: Implement HTML for Instant Articles

- ZON-2478: Implement RSS feed for Instant Articles

- ZON-2460: Fix several problems for wrapper apps

- ZON-2450: Add more advertorials to navigation

- ZON-2449: Include kicker in title of socialflow feeds

- ZON-2429: "Snapshot" on homepage now is a normal teaser module

- MAINT: Cleanup community notifications

- FIX: Be more defensive in several places:
  * Portraitboxes with funny HTML
  * Images with empty copyright
  * Videos without still image


2.34 (2015-12-04)
-----------------

- HOTFIX: Fix lineage test

- MAINT: Use `requests` throughout, no more `urllib2.urlopen`

- PERF: Disable `requests` trying to read credentials from `~/.netrc`,
  saving quite a few superfluous disk accesses

- ZON-2408: Add overscroll effect
