@@ -12,7 +12,6 @@ import zeit.web.core.interfaces
 
 def test_author_header_should_be_fully_rendered(testbrowser):
     browser = testbrowser('/autoren/j_random')
-    header = browser.cssselect('.author-header')
     name = browser.cssselect('.author-header__name')
     summary = browser.cssselect('.author-header__summary')
     image = browser.cssselect('.author-header__image')
@@ -142,3 +141,11 @@ def test_author_biography_should_be_fully_rendered(testbrowser):
     summary = browser.cssselect('.author-header__summary')
     assert 'Redakteur im Ressort Digital' in summary[0].text
     assert browser.cssselect('.author-questions')
+
+
+def test_view_authors_pagetitles_should_be_equal(application):
+    author = zeit.cms.interfaces.ICMSContent(
+        'http://xml.zeit.de/autoren/author3')
+    request = mock.Mock()
+    view = zeit.web.site.view_author.Author(author, request)
+    assert view.pagetitle == view.social_pagetitle
